--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive:
+  hive_flutter:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,6 +55,8 @@ flutter_launcher_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator:
+  build_runner:
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -80,6 +84,7 @@ flutter:
    - Assets/exeimages/
    - Assets/exeimages/prodect/
    - Assets/exeimages/bagimage/
+   - Assets/exeimages/WhatsApp Image 2024-01-25 at 15.21.35_570e4c1c.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
