--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   timeline_tile:
   timelines:
   flutter_automation: ^2.0.0
+  flutter_rating_bar:
 
 flutter_launcher_icons:
   android: "launcher_icon"
